--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
   <!-- Bootstrap Core CSS -->
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="/css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- Custom CSS -->
-  <link href="assets/css/styles.css" rel="stylesheet" />
+  <link href="/css/styles.css" rel="stylesheet" />
 
-  <link href="assets/css/admin.css" rel="stylesheet" />
+  <link href="/css/admin.css" rel="stylesheet" />
   <!-- Custom Fonts -->
-  <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+  <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
   <link href="//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700" rel="stylesheet" type="text/css" />
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
-  <script src="assets/js/html5shiv.js"></script>
-  <script src="assets/js/respond.min.js"></script>
+  <script src="/js/html5shiv.js"></script>
+  <script src="/js/respond.min.js"></script>
   <![endif]-->
 </head>
 
@@ -212,7 +212,7 @@
           <li yb:listItem="" class="timeline">
             <div class="timeline-image">
 
-              <img class="img-circle img-responsive" alt="" src="assets/img/process/step-1.jpg" />
+              <img class="img-circle img-responsive" alt="" src="/img/process/step-1.jpg" />
             </div>
             <div class="timeline-panel">
               <div class="timeline-number">1</div>
@@ -235,7 +235,7 @@
           <li yb:listItem="" class="timeline-inverted">
             <div class="timeline-image">
 
-              <img class="img-circle img-responsive" alt="" src="assets/img/process/step-2.jpg" />
+              <img class="img-circle img-responsive" alt="" src="/img/process/step-2.jpg" />
             </div>
             <div class="timeline-panel">
               <div class="timeline-number">2</div>
@@ -259,7 +259,7 @@
           <li yb:listItem="" class="timeline">
             <div class="timeline-image">
 
-              <img class="img-circle img-responsive" alt="" src="assets/img/process/step-3.jpg" />
+              <img class="img-circle img-responsive" alt="" src="/img/process/step-3.jpg" />
             </div>
             <div class="timeline-panel">
               <div class="timeline-number">3</div>
@@ -282,7 +282,7 @@
           <li yb:listItem="" class="timeline-inverted">
             <div class="timeline-image">
 
-              <img class="img-circle img-responsive" alt="" src="assets/img/process/step-4.jpg" />
+              <img class="img-circle img-responsive" alt="" src="/img/process/step-4.jpg" />
             </div>
             <div class="timeline-panel">
               <div class="timeline-number">4</div>
@@ -306,7 +306,7 @@
           <li yb:listItem="" class="timeline">
             <div class="timeline-image">
 
-              <img class="img-circle img-responsive" alt="" src="assets/img/process/step-5.jpg" />
+              <img class="img-circle img-responsive" alt="" src="/img/process/step-5.jpg" />
             </div>
             <div class="timeline-panel">
               <div class="timeline-number">5</div>
@@ -330,7 +330,7 @@
           <li yb:listItem="" class="timeline-inverted">
             <div class="timeline-image">
 
-              <img class="img-circle img-responsive" alt="" src="assets/img/process/step-6.jpg" />
+              <img class="img-circle img-responsive" alt="" src="/img/process/step-6.jpg" />
             </div>
             <div class="timeline-panel">
               <div class="timeline-number">6</div>
@@ -416,25 +416,25 @@
 </footer>
 
 <!-- jQuery -->
-<script src="assets/js/jquery.js" xml:space="preserve"></script>
+<script src="/js/jquery.js" xml:space="preserve"></script>
 
 <!-- Bootstrap Core JS -->
-<script src="assets/js/bootstrap.min.js" xml:space="preserve"></script>
+<script src="/js/bootstrap.min.js" xml:space="preserve"></script>
 
 <!-- Plugin JSt -->
-<script src="assets/js/jquery.easing.min.js" xml:space="preserve"></script>
-<script src="assets/js/classie.js" xml:space="preserve"></script>
-<script src="assets/js/cbpAnimatedHeader.js" xml:space="preserve"></script>
+<script src="/js/jquery.easing.min.js" xml:space="preserve"></script>
+<script src="/js/classie.js" xml:space="preserve"></script>
+<script src="/js/cbpAnimatedHeader.js" xml:space="preserve"></script>
 
 <!-- Contact Form JS -->
-<script src="assets/js/jqBootstrapValidation.js" xml:space="preserve"></script>
-<script src="assets/js/contact.js" xml:space="preserve"></script>
+<script src="/js/jqBootstrapValidation.js" xml:space="preserve"></script>
+<script src="/js/contact.js" xml:space="preserve"></script>
 
 <!-- Page Scroll Effects JS -->
-<script src="assets/js/pageScroll.js" xml:space="preserve"></script>
+<script src="/js/pageScroll.js" xml:space="preserve"></script>
 
 
-<script src="assets/js/admin.js" xml:space="preserve"></script>
+<script src="/js/admin.js" xml:space="preserve"></script>
 
 
 </body>
