--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <link href="/css/styles.css" rel="stylesheet" />
 
   <!-- Custom Fonts -->
-  <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-  <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
-  <link href="//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700" rel="stylesheet" type="text/css" />
+  <!--link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" /-->
+  <!--link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" /-->
+  <!--link href="//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700" rel="stylesheet" type="text/css" /-->
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -423,6 +423,20 @@
 <!-- Page Scroll Effects JS -->
 <script src="/js/pageScroll.js" xml:space="preserve"></script>
 
+<script>
+  var cb = function() {
+    var styleRefs = ['/font-awesome/css/font-awesome.min.css','//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800','//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700'];
+    styleRefs.forEach(function(element, index, array) {
+      var l = document.createElement('link'); l.rel = 'stylesheet';
+      l.href = element;
+      var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+    });
+  };
+  var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+      webkitRequestAnimationFrame || msRequestAnimationFrame;
+  if (raf) raf(cb);
+  else window.addEventListener('load', cb);
+</script>
 
 </body>
 
