MG-13 added cache-control meta tag.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- If the pageHead has been populated by the cms, use it to build meta and title data -->
-
-  <!-- If the pageHead is not populated, use static content -->
+  <meta name="cache-control" content="public" />
 
   <meta name="description" content="A digital solutions agency based in Bellingham, WA. Call us today: +1-360-305-3169" />
   <title>YellowBadger - Digital Solutions Agency</title>
